[project]
authors = [{name = "Théo Cuisset", email = "theo.cuisset@polytechnique.edu"}]
dependencies = []
name = "dependencyGraph"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dependencygraph = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
networkx = ">=3.6.1,<4"
graphviz = ">=14.1.2,<15"
pygraphviz = ">=1.14,<2"
ipykernel = ">=7.1.0,<8"
matplotlib = ">=3.10.8,<4"
matplotlib-base = ">=3.10.8,<4"
pydot = ">=4.0.1,<5"
